<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/instructionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto"
            android:gravity="center|center_horizontal"
            android:text="@string/instruction_title"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/box_three_text"
            style="@style/white_box"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/margin_wide"
            android:text="@string/box_three"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/instructionBody" />

        <TextView
            android:id="@+id/box_one_text"
            style="@style/white_box"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="@dimen/margin_wide"
            android:layout_marginTop="40dp"
            android:layout_marginRight="@dimen/margin_wide"
            android:text="@string/box_one"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionBody" />

        <TextView
            android:id="@+id/box_two_text"
            style="@style/white_box"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/box_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" />

        <TextView
            android:id="@+id/box_five_text"
            style="@style/white_box"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/box_five"
            app:layout_constraintStart_toEndOf="@+id/box_four_text"
            app:layout_constraintTop_toBottomOf="@+id/box_six_text" />

        <TextView
            android:id="@+id/box_six_text"
            style="@style/white_box"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/box_five"
            app:layout_constraintStart_toEndOf="@+id/box_three_text"
            app:layout_constraintTop_toBottomOf="@+id/instructionBody" />

        <TextView
            android:id="@+id/box_four_text"
            style="@style/white_box"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/margin_wide"
            android:text="@string/box_four"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text" />

        <TextView
            android:id="@+id/instructionBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/instruction_body"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>